# evolan

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  makefile  todo.txt
.fleet/: run.json
GUI/: CMakeLists.txt  UntitledProject.qmlproject.qtds  qmlmodules
GUI/content/: Screen01.ui.qml
GUI/imports/UntitledProject/: qmldir  (+1 more)
examples/: main.rs
flowcharts/: main.drawio
lib/: live_view.exp  live_view.lib  render_img.exp  render_img.lib
output/: network.csv
output/graphs/: 08.12.2023_15.01.25.html  08.12.2023_15.01.42.html  08.12.2023_15.02.10.html  08.12.2023_15.10.46.html  08.12.2023_15.12.15.html  08.12.2023_15.18.07.html  08.12.2023_15.20.06.html  11.12.2023_11.48.30.html  11.12.2023_11.49.12.html  11.12.2023_11.52.04.html  11.12.2023_11.52.21.html  11.12.2023_11.52.34.html  14.12.2023_20.45.40.html  14.12.2023_20.53.49.html  19.11.2023_21.40.30.html  19.11.2023_21.54.19.html  19.11.2023_21.58.53.html  19.11.2023_22.04.07.html  22.11.2023_09.05.35.html  23.11.2023_20.02.36.html
output/old graphs/: 21.11.2023_22.18.24.html  21.11.2023_22.20.33.html  22.11.2023_09.07.01.html
src/: calculate.rs  concept  lib.rs  main.rs  settings.rs  tests.rs  todo.txt  tools.rs  world.rs
src/calculate/: calc.c  calc_network.cu  calc_network.exp  calc_network.lib  mod.rs
src/live_view/: live_view.c  live_view.cu  mod.rs  render.cu  render.h
src/tools/: compress.rs  load.rs  mod.rs  plot_network.rs  save.rs  store_gen.rs
src/world/: cluster.rs  criteria.rs  neurons.rs  objects.rs  world_fns.rs
tests/: test1.rs
visualizing/: main.py  ui.py  video.py
(+5 files in other folders)
