[package]
name = "evvolan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.8"
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lz4_flex = { version = "0.11", default-features = false }
tar = "0.4.40"

[build-dependencies]
bindgen = "0.69.1"