[package]
name = "evolan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[lib]
name = "evolan"
path = "src/lib.rs"

[tests]
name = "test1"
path = "tests/test1.rs"

[[examples]]
name = "main"
path = "examples/main.rs"

[dev-dependencies]
rfd = "0.14.0"

[dependencies]
rand = "0.8.5"
rayon = "1.8"
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lz4_flex = { version = "0.11"}
tar = "0.4.40"
walkdir = "2.4"

